--- a/vue-crud-app/public/404.html
+++ b/vue-crud-app/public/404.html
@@ -5,7 +5,7 @@
     <title>Page Not Found</title>
     <script type="text/javascript">
       // Redireciona todas as rotas para o index.html
-      var redirectTo = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':' + window.location.port : '') + '/nome-do-repositorio/';
+      var redirectTo = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':' + window.location.port : '') + '/Atech-Test/';
       window.location.href = redirectTo;
     </script>
   </head>
